--- a/info.plist
+++ b/info.plist
@@ -60,6 +60,7 @@
 		<string>B34BC19E-0138-46A5-BCD5-A51FC3B45C96</string>
 		<string>C8165BDE-BEA2-40B5-B23B-A4AC9FB51214</string>
 		<string>CA80B014-F99D-4B6F-91CF-03155D357509</string>
+		<string>CFDCA1B9-64CA-4C33-91AA-B39B18F2DF52</string>
 		<string>2DDE228E-5B70-4290-A12C-519985AB5B82</string>
 		<string>A9B9207E-19CD-4C2C-BFD4-461A2F1549BC</string>
 		<string>D3C7EB77-8F43-432B-81DA-F9076086607D</string>
@@ -69,6 +70,9 @@
 		<string>9A91CFAE-2895-4CC5-93DE-40C41714A0FA</string>
 		<string>66E18590-AC88-4E1A-A673-E0ED056A6474</string>
 		<string>EE545694-660D-4FF6-948F-FCFAE1D738D1</string>
+		<string>FB8F7438-237A-4364-9648-4A4242F7F924</string>
+		<string>089A54C1-2C56-4E35-ABF7-D4F0235B4E0B</string>
+		<string>EF123D30-DA3D-4744-B17F-ECFC6D550B28</string>
 	</array>
 	<key>uuid</key>
 	<string>60377746-7F5D-4251-A8DA-A5E38AAD43C5</string>
